tests/tests/snapshots/test__openapi__openapi-export-dynamic-ref-serde_phases.snap
---
source: tests/tests/openapi.rs
expression: "phase_output(result,\nOpenAPI::default().title(\"Test API\").version(\"1.0.0\").openapi_version(OpenApiVersion::V3_1_0).generic_handling(GenericHandling::DynamicRef),)"
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "Test API",
    "version": "1.0.0"
  },
  "paths": {},
  "components": {
    "schemas": {
      "ExtraFields": {
        "title": "ExtraFields",
        "type": "object",
        "properties": {
          "slug": {
            "type": "string"
          }
        },
        "required": [
          "slug"
        ],
        "additionalProperties": false
      },
      "FlattenedUser": {
        "title": "FlattenedUser",
        "allOf": [
          {
            "allOf": [
              {
                "$ref": "#/components/schemas/ExtraFields"
              }
            ]
          },
          {
            "type": "object",
            "properties": {
              "id": {
                "type": "integer",
                "format": "int32",
                "minimum": 0
              }
            },
            "required": [
              "id"
            ]
          }
        ]
      },
      "GenericBox": {
        "title": "GenericBox",
        "$dynamicAnchor": "GenericBox",
        "type": "object",
        "properties": {
          "value": {
            "$dynamicRef": "#generic-11706555352288967848"
          },
          "values": {
            "type": "array",
            "items": {
              "$dynamicRef": "#generic-11706555352288967848"
            }
          }
        },
        "required": [
          "value",
          "values"
        ],
        "additionalProperties": false
      },
      "String": {
        "title": "String",
        "type": "string"
      },
      "TaggedEnum": {
        "title": "TaggedEnum",
        "oneOf": [
          {
            "type": "object",
            "properties": {
              "data": {
                "type": "object",
                "properties": {
                  "kind": {
                    "type": "string",
                    "enum": [
                      "Unit"
                    ]
                  }
                },
                "required": [
                  "kind"
                ],
                "additionalProperties": false
              },
              "kind": {
                "type": "string",
                "enum": [
                  "Unit"
                ]
              }
            },
            "required": [
              "kind",
              "data"
            ],
            "additionalProperties": false
          },
          {
            "type": "object",
            "properties": {
              "data": {
                "type": "object",
                "properties": {
                  "data": {
                    "type": "integer",
                    "format": "int32"
                  },
                  "kind": {
                    "type": "string",
                    "enum": [
                      "Tuple"
                    ]
                  }
                },
                "required": [
                  "kind",
                  "data"
                ],
                "additionalProperties": false
              },
              "kind": {
                "type": "string",
                "enum": [
                  "Tuple"
                ]
              }
            },
            "required": [
              "kind",
              "data"
            ],
            "additionalProperties": false
          },
          {
            "type": "object",
            "properties": {
              "data": {
                "type": "object",
                "properties": {
                  "data": {
                    "type": "object",
                    "properties": {
                      "value": {
                        "type": "string"
                      }
                    },
                    "required": [
                      "value"
                    ],
                    "additionalProperties": false
                  },
                  "kind": {
                    "type": "string",
                    "enum": [
                      "Named"
                    ]
                  }
                },
                "required": [
                  "kind",
                  "data"
                ],
                "additionalProperties": false
              },
              "kind": {
                "type": "string",
                "enum": [
                  "Named"
                ]
              }
            },
            "required": [
              "kind",
              "data"
            ],
            "additionalProperties": false
          }
        ]
      },
      "User": {
        "title": "User",
        "type": "object",
        "properties": {
          "email": {
            "nullable": true,
            "type": "string"
          },
          "id": {
            "type": "integer",
            "format": "int32",
            "minimum": 0
          },
          "name": {
            "type": "string"
          }
        },
        "required": [
          "id",
          "name",
          "email"
        ],
        "additionalProperties": false
      },
      "UsesGenerics": {
        "title": "UsesGenerics",
        "type": "object",
        "properties": {
          "number_box": {
            "$dynamicRef": "#GenericBox",
            "x-specta-generics": [
              {
                "format": "int32",
                "type": "integer"
              }
            ]
          },
          "string_box": {
            "$dynamicRef": "#GenericBox",
            "x-specta-generics": [
              {
                "type": "string"
              }
            ]
          }
        },
        "required": [
          "string_box",
          "number_box"
        ],
        "additionalProperties": false
      },
      "Vec": {
        "title": "Vec",
        "$dynamicAnchor": "Vec",
        "type": "array",
        "items": {
          "$dynamicRef": "#generic-156128471555764935"
        }
      }
    }
  }
}
