tests/tests/snapshots/test__openapi__openapi-export-serde_phases.snap
---
source: tests/tests/openapi.rs
expression: "phase_output(result, OpenAPI::default().title(\"Test API\").version(\"1.0.0\"))"
---
{
  "openapi": "3.0.3",
  "info": {
    "title": "Test API",
    "version": "1.0.0"
  },
  "paths": {},
  "components": {
    "schemas": {
      "ExtraFields": {
        "title": "ExtraFields",
        "type": "object",
        "properties": {
          "slug": {
            "type": "string"
          }
        },
        "required": [
          "slug"
        ],
        "additionalProperties": false
      },
      "FlattenedUser": {
        "title": "FlattenedUser",
        "allOf": [
          {
            "allOf": [
              {
                "$ref": "#/components/schemas/ExtraFields"
              }
            ]
          },
          {
            "type": "object",
            "properties": {
              "id": {
                "type": "integer",
                "format": "int32",
                "minimum": 0
              }
            },
            "required": [
              "id"
            ]
          }
        ]
      },
      "GenericBox__12307386145336855962": {
        "title": "GenericBox__12307386145336855962",
        "type": "object",
        "properties": {
          "value": {
            "type": "integer",
            "format": "int32"
          },
          "values": {
            "type": "array",
            "items": {
              "type": "integer",
              "format": "int32"
            }
          }
        },
        "required": [
          "value",
          "values"
        ],
        "additionalProperties": false
      },
      "GenericBox__519481054346207025": {
        "title": "GenericBox__519481054346207025",
        "type": "object",
        "properties": {
          "value": {
            "type": "string"
          },
          "values": {
            "type": "array",
            "items": {
              "type": "string"
            }
          }
        },
        "required": [
          "value",
          "values"
        ],
        "additionalProperties": false
      },
      "String": {
        "title": "String",
        "type": "string"
      },
      "TaggedEnum": {
        "title": "TaggedEnum",
        "oneOf": [
          {
            "type": "object",
            "properties": {
              "data": {
                "type": "object",
                "properties": {
                  "kind": {
                    "type": "string",
                    "enum": [
                      "Unit"
                    ]
                  }
                },
                "required": [
                  "kind"
                ],
                "additionalProperties": false
              },
              "kind": {
                "type": "string",
                "enum": [
                  "Unit"
                ]
              }
            },
            "required": [
              "kind",
              "data"
            ],
            "additionalProperties": false
          },
          {
            "type": "object",
            "properties": {
              "data": {
                "type": "object",
                "properties": {
                  "data": {
                    "type": "integer",
                    "format": "int32"
                  },
                  "kind": {
                    "type": "string",
                    "enum": [
                      "Tuple"
                    ]
                  }
                },
                "required": [
                  "kind",
                  "data"
                ],
                "additionalProperties": false
              },
              "kind": {
                "type": "string",
                "enum": [
                  "Tuple"
                ]
              }
            },
            "required": [
              "kind",
              "data"
            ],
            "additionalProperties": false
          },
          {
            "type": "object",
            "properties": {
              "data": {
                "type": "object",
                "properties": {
                  "data": {
                    "type": "object",
                    "properties": {
                      "value": {
                        "type": "string"
                      }
                    },
                    "required": [
                      "value"
                    ],
                    "additionalProperties": false
                  },
                  "kind": {
                    "type": "string",
                    "enum": [
                      "Named"
                    ]
                  }
                },
                "required": [
                  "kind",
                  "data"
                ],
                "additionalProperties": false
              },
              "kind": {
                "type": "string",
                "enum": [
                  "Named"
                ]
              }
            },
            "required": [
              "kind",
              "data"
            ],
            "additionalProperties": false
          }
        ]
      },
      "User": {
        "title": "User",
        "type": "object",
        "properties": {
          "email": {
            "nullable": true,
            "type": "string"
          },
          "id": {
            "type": "integer",
            "format": "int32",
            "minimum": 0
          },
          "name": {
            "type": "string"
          }
        },
        "required": [
          "id",
          "name",
          "email"
        ],
        "additionalProperties": false
      },
      "UsesGenerics": {
        "title": "UsesGenerics",
        "type": "object",
        "properties": {
          "number_box": {
            "allOf": [
              {
                "$ref": "#/components/schemas/GenericBox__12307386145336855962"
              }
            ]
          },
          "string_box": {
            "allOf": [
              {
                "$ref": "#/components/schemas/GenericBox__519481054346207025"
              }
            ]
          }
        },
        "required": [
          "string_box",
          "number_box"
        ],
        "additionalProperties": false
      }
    }
  }
}
