tests/tests/snapshots/test__openapi__openapi-representative-shapes-3-1.snap
---
source: tests/tests/openapi.rs
expression: "serde_json::to_string_pretty(&document).expect(\"snapshot value should serialize\")"
---
{
  "components": {
    "schemas": {
      "ApiEvent": {
        "oneOf": [
          {
            "additionalProperties": false,
            "properties": {
              "kind": {
                "const": "Started"
              }
            },
            "required": [
              "kind"
            ],
            "type": "object"
          },
          {
            "additionalProperties": false,
            "properties": {
              "data": {
                "additionalProperties": false,
                "properties": {
                  "percent": {
                    "format": "float",
                    "type": "number"
                  }
                },
                "required": [
                  "percent"
                ],
                "type": "object"
              },
              "kind": {
                "const": "Progress"
              }
            },
            "required": [
              "kind",
              "data"
            ],
            "type": "object"
          },
          {
            "additionalProperties": false,
            "properties": {
              "data": {
                "type": "string"
              },
              "kind": {
                "const": "Message"
              }
            },
            "required": [
              "kind",
              "data"
            ],
            "type": "object"
          }
        ],
        "title": "ApiEvent"
      },
      "ApiModel_String": {
        "additionalProperties": false,
        "properties": {
          "fixed": {
            "items": {
              "format": "int32",
              "maximum": 255,
              "minimum": 0,
              "type": "integer"
            },
            "maxItems": 2,
            "minItems": 2,
            "type": "array"
          },
          "id": {
            "description": " Stable identifier.",
            "format": "int64",
            "minimum": 0,
            "type": "integer",
            "x-specta-maximum": 18446744073709551615
          },
          "labels": {
            "additionalProperties": {
              "format": "int32",
              "maximum": 2147483647,
              "minimum": -2147483648,
              "type": "integer"
            },
            "type": "object"
          },
          "optionalValue": {
            "anyOf": [
              {
                "type": "string"
              },
              {
                "type": "null"
              }
            ]
          },
          "tuple": {
            "items": false,
            "maxItems": 2,
            "minItems": 2,
            "prefixItems": [
              {
                "type": "string"
              },
              {
                "type": "boolean"
              }
            ],
            "type": "array"
          },
          "value": {
            "type": "string"
          }
        },
        "required": [
          "id",
          "value",
          "optionalValue",
          "fixed",
          "tuple",
          "labels"
        ],
        "title": "ApiModel",
        "type": "object"
      },
      "ApiModel_u32": {
        "additionalProperties": false,
        "properties": {
          "fixed": {
            "items": {
              "format": "int32",
              "maximum": 255,
              "minimum": 0,
              "type": "integer"
            },
            "maxItems": 2,
            "minItems": 2,
            "type": "array"
          },
          "id": {
            "description": " Stable identifier.",
            "format": "int64",
            "minimum": 0,
            "type": "integer",
            "x-specta-maximum": 18446744073709551615
          },
          "labels": {
            "additionalProperties": {
              "format": "int32",
              "maximum": 2147483647,
              "minimum": -2147483648,
              "type": "integer"
            },
            "type": "object"
          },
          "optionalValue": {
            "anyOf": [
              {
                "type": "string"
              },
              {
                "type": "null"
              }
            ]
          },
          "tuple": {
            "items": false,
            "maxItems": 2,
            "minItems": 2,
            "prefixItems": [
              {
                "type": "string"
              },
              {
                "type": "boolean"
              }
            ],
            "type": "array"
          },
          "value": {
            "format": "int64",
            "maximum": 4294967295,
            "minimum": 0,
            "type": "integer"
          }
        },
        "required": [
          "id",
          "value",
          "optionalValue",
          "fixed",
          "tuple",
          "labels"
        ],
        "title": "ApiModel",
        "type": "object"
      },
      "EventAlias": {
        "$ref": "#/components/schemas/ApiEvent",
        "title": "EventAlias"
      },
      "OverlappingUntagged": {
        "anyOf": [
          {
            "format": "int64",
            "maximum": 4294967295,
            "minimum": 0,
            "type": "integer"
          },
          {
            "format": "int64",
            "maximum": 4294967295,
            "minimum": 0,
            "type": "integer"
          }
        ],
        "title": "OverlappingUntagged"
      },
      "ReferencedField": {
        "additionalProperties": false,
        "properties": {
          "event": {
            "$ref": "#/components/schemas/ApiEvent",
            "deprecated": true,
            "description": " Event payload documentation."
          }
        },
        "required": [
          "event"
        ],
        "title": "ReferencedField",
        "type": "object"
      },
      "StringNewtype": {
        "title": "StringNewtype",
        "type": "string"
      },
      "UsesGenerics": {
        "additionalProperties": false,
        "properties": {
          "event": {
            "$ref": "#/components/schemas/ApiEvent"
          },
          "number": {
            "$ref": "#/components/schemas/ApiModel_u32"
          },
          "text": {
            "$ref": "#/components/schemas/ApiModel_String"
          }
        },
        "required": [
          "text",
          "number",
          "event"
        ],
        "title": "UsesGenerics",
        "type": "object"
      }
    }
  },
  "info": {
    "title": "Specta API",
    "version": "0.0.0"
  },
  "openapi": "3.1.0",
  "paths": {}
}
