tests/tests/snapshots/test__openapi__openapi-representative-shapes.snap
---
source: tests/tests/openapi.rs
expression: "serde_json::to_string_pretty(&value).expect(\"snapshot value should serialize\")"
---
{
  "components": {
    "schemas": {
      "ApiEvent": {
        "oneOf": [
          {
            "additionalProperties": false,
            "properties": {
              "kind": {
                "enum": [
                  "Started"
                ]
              }
            },
            "required": [
              "kind"
            ],
            "type": "object"
          },
          {
            "additionalProperties": false,
            "properties": {
              "data": {
                "additionalProperties": false,
                "properties": {
                  "percent": {
                    "type": "number"
                  }
                },
                "required": [
                  "percent"
                ],
                "type": "object"
              },
              "kind": {
                "enum": [
                  "Progress"
                ]
              }
            },
            "required": [
              "kind",
              "data"
            ],
            "type": "object"
          },
          {
            "additionalProperties": false,
            "properties": {
              "data": {
                "type": "string"
              },
              "kind": {
                "enum": [
                  "Message"
                ]
              }
            },
            "required": [
              "kind",
              "data"
            ],
            "type": "object"
          }
        ],
        "title": "ApiEvent"
      },
      "ApiModel_String": {
        "additionalProperties": false,
        "properties": {
          "fixed": {
            "items": {
              "maximum": 255,
              "minimum": 0,
              "type": "integer"
            },
            "maxItems": 2,
            "minItems": 2,
            "type": "array"
          },
          "id": {
            "description": " Stable identifier.",
            "maximum": 1.8446744073709552e+19,
            "minimum": 0.0,
            "type": "integer"
          },
          "labels": {
            "additionalProperties": {
              "maximum": 2147483647,
              "minimum": -2147483648,
              "type": "integer"
            },
            "type": "object"
          },
          "optionalValue": {
            "nullable": true,
            "type": "string",
            "x-specta-nullable": true
          },
          "tuple": {
            "items": {
              "oneOf": [
                {
                  "type": "string"
                },
                {
                  "type": "boolean"
                }
              ]
            },
            "maxItems": 2,
            "minItems": 2,
            "type": "array",
            "x-specta-prefix-items": [
              {
                "type": "string"
              },
              {
                "type": "boolean"
              }
            ]
          },
          "value": {
            "type": "string"
          }
        },
        "required": [
          "id",
          "value",
          "optionalValue",
          "fixed",
          "tuple",
          "labels"
        ],
        "title": "ApiModel",
        "type": "object"
      },
      "ApiModel_u32": {
        "additionalProperties": false,
        "properties": {
          "fixed": {
            "items": {
              "maximum": 255,
              "minimum": 0,
              "type": "integer"
            },
            "maxItems": 2,
            "minItems": 2,
            "type": "array"
          },
          "id": {
            "description": " Stable identifier.",
            "maximum": 1.8446744073709552e+19,
            "minimum": 0.0,
            "type": "integer"
          },
          "labels": {
            "additionalProperties": {
              "maximum": 2147483647,
              "minimum": -2147483648,
              "type": "integer"
            },
            "type": "object"
          },
          "optionalValue": {
            "nullable": true,
            "type": "string",
            "x-specta-nullable": true
          },
          "tuple": {
            "items": {
              "oneOf": [
                {
                  "type": "string"
                },
                {
                  "type": "boolean"
                }
              ]
            },
            "maxItems": 2,
            "minItems": 2,
            "type": "array",
            "x-specta-prefix-items": [
              {
                "type": "string"
              },
              {
                "type": "boolean"
              }
            ]
          },
          "value": {
            "maximum": 4294967295,
            "minimum": 0,
            "type": "integer"
          }
        },
        "required": [
          "id",
          "value",
          "optionalValue",
          "fixed",
          "tuple",
          "labels"
        ],
        "title": "ApiModel",
        "type": "object"
      },
      "EventAlias": {
        "allOf": [
          {
            "$ref": "#/components/schemas/ApiEvent"
          }
        ],
        "title": "EventAlias"
      },
      "OverlappingUntagged": {
        "anyOf": [
          {
            "maximum": 4294967295,
            "minimum": 0,
            "type": "integer"
          },
          {
            "maximum": 4294967295,
            "minimum": 0,
            "type": "integer"
          }
        ],
        "title": "OverlappingUntagged"
      },
      "ReferencedField": {
        "additionalProperties": false,
        "properties": {
          "event": {
            "allOf": [
              {
                "$ref": "#/components/schemas/ApiEvent"
              }
            ],
            "deprecated": true,
            "description": " Event payload documentation."
          }
        },
        "required": [
          "event"
        ],
        "title": "ReferencedField",
        "type": "object"
      },
      "StringNewtype": {
        "title": "StringNewtype",
        "type": "string"
      },
      "UsesGenerics": {
        "additionalProperties": false,
        "properties": {
          "event": {
            "$ref": "#/components/schemas/ApiEvent"
          },
          "number": {
            "$ref": "#/components/schemas/ApiModel_u32"
          },
          "text": {
            "$ref": "#/components/schemas/ApiModel_String"
          }
        },
        "required": [
          "text",
          "number",
          "event"
        ],
        "title": "UsesGenerics",
        "type": "object"
      }
    }
  },
  "info": {
    "title": "Specta API",
    "version": "0.0.0"
  },
  "openapi": "3.0.3",
  "paths": {}
}
